--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>
                 Sinds 2021 werk ik als freelancer. Ik word er vrolijk van om afwisselend werk uit te voeren en met diverse teams te werken. Wat ik het liefste doe tijdens mijn werk is kennis en ervaring delen met andere ondernemers en organisaties en hen verrassen met creativiteit en enthousiasme.
             </p>
-            <img src="afbeeldingen/Nasera.jpg" alt="Nasera" width="300">
+            <img src="afbeeldingen/nasera.jpg" alt="Nasera" width="300">
         </section>
     </div>
     
