--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
     <header>
         <div class="container">
-            <h1>Nasera Elfring</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="mijncv.html">Mijn CV</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="header-inner">
+                <h1>Nasera Elfring</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="mijncv.html">Mijn CV</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     
