--- a/mijncv.html
+++ b/mijncv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nasera Elfring - Home</title>
+    <title>Nasera Elfring - Mijn CV</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
